--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
       // WhatsApp business link
       // NOTE: Replace BUSINESS_NUMBER at top with your number (without +)
-      const waUrl = 'https://wa.me/+917061570522'?text='+text;
+      const waUrl = 'https://wa.me/'+BUSINESS_NUMBER+'?text='+text;
       window.open(waUrl, '_blank');
     });
 
@@ -443,4 +443,5 @@
   </script>
 </body>
 </html>
+
 
