--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <select id="offersSelect">
             <!-- Options populated by JS -->
           </select>
-          <div style="margin-left:auto;color:var(--muted);font-size:13px">✨ Snatch our Diwali offer now and turn your dream home into reality before it’s gone! 🏠💫</div>
+          <div style="margin-left:auto;color:var(--muted);font-size:13px"></div>
         </div>
         
         <!-- Error Message Display Area -->
@@ -443,5 +443,6 @@
   </script>
 </body>
 </html>
+
 
 
